k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whereami-service
  labels:
    app: whereami
spec:
  selector:
    app: whereami
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
